# vt

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  Makefile.default  README.md  ahmm.cpp  ahmm.h  align.cpp  align.h  allele.cpp  allele.h  annotate_1000g.cpp  annotate_1000g.h  annotate_dbsnp_rsid.cpp  annotate_dbsnp_rsid.h  annotate_indel.cpp  annotate_indel.h  annotate_indels.cpp  annotate_indels.h  annotate_indels2.cpp  annotate_indels2.h  annotate_mendelian.cpp  annotate_mendelian.h  annotate_regions.cpp  annotate_regions.h  annotate_str.cpp  annotate_str.h  annotate_variants.cpp  annotate_variants.h  annotate_vntrs.cpp  annotate_vntrs.h  augmented_bam_record.cpp  augmented_bam_record.h  augmented_cigar.cpp  augmented_cigar.h  bam_ordered_reader.cpp  bam_ordered_reader.h  bam_variant_extractor.cpp  (+322 more)
lib/Rmath/: Makefile  README.md  bessel_i.c  dt.c  librandom.c
lib/Rmath/Rmath/: Rmath.h
lib/htslib/htscodecs/: Makefile.am  NEWS  README.md  configure.ac
lib/htslib/htscodecs/htscodecs/: tokenise_name3.c
lib/htslib/htscodecs/javascript/: Makefile  README.md  arith_gen.js  arith_sh.js  byte_model.js  fqzcomp.js  index.js  iostream.js  main_arith_gen.js  main_fqzcomp.js  main_rans.js  main_rans4x16.js  main_tok3.js  rans.js  rans4x16.js  tok3.js
lib/htslib/htscodecs/m4/: ax_with_libdeflate.m4  vl_prog_warnings.m4  zlib.m4
lib/htslib/htscodecs/tests/: Makefile.am  arith.test  arith_dynamic_fuzz.c  arith_dynamic_test.c  fqzcomp.test  fqzcomp_qual_fuzz.c  fqzcomp_qual_test.c  rANS_static4x16pr_fuzz.c  rANS_static4x16pr_test.c  rANS_static_fuzz.c  rANS_static_test.c  rans4x16.test  rans4x8.test  tok3.test  tokenise_name3_fuzz.c  tokenise_name3_test.c  varint_test.c
lib/htslib/test/tabix/: test-tabix.sh
lib/include/Rmath/: Make.inc  README.md  randmtzig.c
lib/include/Rmath/Rmath/: Rmath.h  Rmath.h0
lib/include/htslib/: Makefile  bgzf.c  bgzf.h  hts.c  sam.c  synced_bcf_reader.c  tbx.c  vcf.c  vcf.h
lib/include/libsvm/: README.md
lib/include/tclap/: Arg.h  CmdLine.h  README.md
lib/libsvm/: Makefile
lib/pcre2/: Makefile  config.h.in  pcre2.h
lib/tclap/: CmdLine.h
test/: test.sh  test_mnv.sh
test/common/: _helpers.sh  strip_error
test/decompose/: 01_IN_multi.vcf  01_OUT_multi.stderr  01_OUT_multi.vcf
test/decompose_blocksub/: 01_OUT_even_length.stderr  01_OUT_even_length.vcf.stderr  01_OUT_even_length.vcf.stdout  02_IN_uneven_length.vcf  02_OUT_uneven_length.stderr  02_OUT_uneven_length.vcf.stderr  02_OUT_uneven_length.vcf.stdout  03_IN_phased_even_length.vcf  03_OUT_phased_even_length.stderr  03_OUT_phased_even_length.vcf  _helpers.sh  _run.sh
test/decompose_blocksub/mnv/: 1bp_dist_mnv.vcf  2bp_dist_mnv.vcf  complex_mnv.vcf  simple_mnv.vcf
test/normalize/: 01_IN.vcf  01_OUT.stderr  01_OUT.vcf  _build.sh  _run.sh
test/ref/: 20.fa.gz.fai  20.fa.gz.gzi
